# ER-Blurbs-Mod

./: .gitignore  Cargo.toml
EldenRingMod_NordgarenTest/: backend_Nordgaren.js
src/: bloodmessage.rs  difficulty.rs  lib.rs  player.rs  reflection.rs  spiritash.rs  task.rs  util.rs
textures/: menu_dlc02.msgbnd.dcx
textures/menu_dlc02-msgbnd-dcx/: GR_MenuText.fmg.xml
