[package]
name = "eldenring-message-spawn"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"

[dependencies]
broadsword = { git = "https://github.com/vswarte/broadsword.git" }
log = "0.4.22"
tungstenite = "0.23"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
retour = { git = "https://github.com/Hpmason/retour-rs", features = ["static-detour"] }
widestring = "1.1.0"
tracing = "0.1.40"

[dependencies.windows]
version = "0.56.0"
features = [
    "Win32_Foundation",
]
